--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "massive": "^6.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lite-youtube-embed": "^1.0.49",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-youtube": "^7.13.1",
     "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^1.1.1"
   },
